--- a/medical-distribution.html
+++ b/medical-distribution.html
@@ -598,7 +598,7 @@
         <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
-            Demander un devis
+            Demandez un devis
             <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
           </a>
         </li>
@@ -617,7 +617,7 @@
   <section class="projet-details">
     <div class="container">
       <div class="projet-content">
-        <h2>Détail du projet</h2>
+        <h2>Détails du projet</h2>
         <ul>
           <li><b>Technologie :</b> WordPress (thème sur mesure, plugins adaptés au secteur médical)</li>
           <li><b>Modernisation UX/UI :</b> Refonte complète du design pour une navigation intuitive et professionnelle</li>
@@ -641,7 +641,7 @@
     <div class="container">
       <h3>Vous souhaitez un site internet professionnel, moderne, performant et parfaitement adapté à votre secteur d’activité ? Faites confiance à Porokhane Digital pour la création ou la refonte de votre site web sur-mesure, optimisé pour le référencement.</h3>
       <a href="devis.html" class="cta-button">
-        <i class="fas fa-paper-plane"></i> Demander un devis
+        <i class="fas fa-paper-plane"></i> Demandez un devis
       </a>
     </div>
   </section>
