--- a/service.html
+++ b/service.html
@@ -791,7 +791,7 @@
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
-            Demander un devis
+            Demandez un devis
             <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
           </a>
         </li>
