--- a/a-propos.html
+++ b/a-propos.html
@@ -1434,7 +1434,7 @@
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
-            Demander un devis
+            Demandez un devis
             <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
           </a>
         </li>
@@ -1456,7 +1456,7 @@
   <section class="section alt" id="croyance-porokhane">
     <div class="container">
       <div class="section-header">
-        <h2>Qui nous sommes</h2>
+        <h2>Qui sommes nous</h2>
       </div>
       <div style="max-width:900px;margin:0 auto;">
         <p style="font-size:1.13rem;color:var(--gris-texte);margin-bottom:2rem;">
@@ -1778,7 +1778,7 @@
       </div>
       <div class="chatbot-suggestions" id="chatbotSuggestions">
         <button class="chatbot-suggestion">Quels services proposez-vous ?</button>
-        <button class="chatbot-suggestion">Comment demander un devis ?</button>
+        <button class="chatbot-suggestion">Comment Demandez un devis ?</button>
         <button class="chatbot-suggestion">Quels sont vos délais de livraison ?</button>
         <button class="chatbot-suggestion">Proposez-vous des formations ?</button>
         <button class="chatbot-suggestion">Comment vous contacter ?</button>
@@ -1966,11 +1966,11 @@ document.addEventListener('DOMContentLoaded', function() {
 // Réponses automatiques (FAQ)
   const chatbotFAQ = {
     'services': "Nous proposons : formations (robotique, impression 3D, cybersécurité), marketing digital, accompagnement (automatisation, IA, bases de données), développement web mobile et plus encore !",
-    'devis': "Pour demander un devis, cliquez sur 'Demander un devis' dans le menu ou rendez-vous sur la page devis. Nous vous répondrons rapidement !",
+    'devis': "Pour Demandez un devis, cliquez sur 'Demandez un devis' dans le menu ou rendez-vous sur la page devis. Nous vous répondrons rapidement !",
     'délais': "Nos délais varient selon le projet, mais nous nous engageons à livrer dans les temps convenus, avec un suivi régulier.",
     'formations': "Oui, nous proposons des formations en robotique, impression 3D, cybersécurité et plus. Consultez la page Formations pour plus d'infos !",
     'contacter': "Vous pouvez nous contacter via la page Contact, par téléphone ou par email. Nous sommes à votre écoute !",
-    'salutation': "Bonjour et bienvenue chez Porokhane Digital Consulting ! 👋\n\nJe peux répondre à vos questions sur :\n• Nos services\n• Comment demander un devis\n• Nos délais de livraison\n• Nos formations\n• Comment nous contacter\n\nCliquez sur une suggestion ou posez votre question !"
+    'salutation': "Bonjour et bienvenue chez Porokhane Digital Consulting ! 👋\n\nJe peux répondre à vos questions sur :\n• Nos services\n• Comment Demandez un devis\n• Nos délais de livraison\n• Nos formations\n• Comment nous contacter\n\nCliquez sur une suggestion ou posez votre question !"
   };
 
   const chatbotBtn = document.getElementById('chatbotBtn');
