--- a/formations.html
+++ b/formations.html
@@ -993,7 +993,7 @@
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
-            Demander un devis
+            Demandez un devis
             <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
           </a>
         </li>
@@ -1005,7 +1005,7 @@
   <section class="hero-banner">
     <div class="container">
       <h1>Formations Innovantes</h1>
-      <p>Développez vos compétences dans les technologies de demain avec nos formations expertes en Robotique, Impression 3D et Cybersécurité.</p>
+      <p>Développez vos compétences dans les technologies de demain avec nos formations en Robotique, Impression 3D et Cybersécurité.</p>
     </div>
   </section>
 
@@ -1152,7 +1152,7 @@
       </div>
       <div class="chatbot-suggestions" id="chatbotSuggestions">
         <button class="chatbot-suggestion">Quels services proposez-vous ?</button>
-        <button class="chatbot-suggestion">Comment demander un devis ?</button>
+        <button class="chatbot-suggestion">Comment Demandez un devis ?</button>
         <button class="chatbot-suggestion">Quels sont vos délais de livraison ?</button>
         <button class="chatbot-suggestion">Proposez-vous des formations ?</button>
         <button class="chatbot-suggestion">Comment vous contacter ?</button>
@@ -1268,11 +1268,11 @@ document.addEventListener('DOMContentLoaded', function() {
 // Réponses automatiques (FAQ)
   const chatbotFAQ = {
     'services': "Nous proposons : formations (robotique, impression 3D, cybersécurité), marketing digital, accompagnement (automatisation, IA, bases de données), développement web mobile et plus encore !",
-    'devis': "Pour demander un devis, cliquez sur 'Demander un devis' dans le menu ou rendez-vous sur la page devis. Nous vous répondrons rapidement !",
+    'devis': "Pour Demandez un devis, cliquez sur 'Demandez un devis' dans le menu ou rendez-vous sur la page devis. Nous vous répondrons rapidement !",
     'délais': "Nos délais varient selon le projet, mais nous nous engageons à livrer dans les temps convenus, avec un suivi régulier.",
     'formations': "Oui, nous proposons des formations en robotique, impression 3D, cybersécurité et plus. Consultez la page Formations pour plus d'infos !",
     'contacter': "Vous pouvez nous contacter via la page Contact, par téléphone ou par email. Nous sommes à votre écoute !",
-    'salutation': "Bonjour et bienvenue chez Porokhane Digital Consulting ! 👋\n\nJe peux répondre à vos questions sur :\n• Nos services\n• Comment demander un devis\n• Nos délais de livraison\n• Nos formations\n• Comment nous contacter\n\nCliquez sur une suggestion ou posez votre question !"
+    'salutation': "Bonjour et bienvenue chez Porokhane Digital Consulting ! 👋\n\nJe peux répondre à vos questions sur :\n• Nos services\n• Comment Demandez un devis\n• Nos délais de livraison\n• Nos formations\n• Comment nous contacter\n\nCliquez sur une suggestion ou posez votre question !"
   };
 
   const chatbotBtn = document.getElementById('chatbotBtn');
