--- a/mo.html
+++ b/mo.html
@@ -687,7 +687,7 @@
         <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
-            Demander un devis
+            Demandez un devis
             <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
           </a>
         </li>
@@ -755,7 +755,7 @@
   <div class="cta-devis">
     <h3>Besoin d'une stratégie digitale complète ?</h3>
     <a href="devis.html" class="nav-devis">
-      <i class="fas fa-paper-plane"></i> Demander un devis
+      <i class="fas fa-paper-plane"></i> Demandez un devis
     </a>
   </div>
 
