--- a/securite.html
+++ b/securite.html
@@ -339,7 +339,7 @@
         <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
-            Demander un devis
+            Demandez un devis
             <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
           </a>
         </li>
@@ -516,7 +516,7 @@
       </div>
       <div class="chatbot-suggestions" id="chatbotSuggestions">
         <button class="chatbot-suggestion">Quels services proposez-vous ?</button>
-        <button class="chatbot-suggestion">Comment demander un devis ?</button>
+        <button class="chatbot-suggestion">Comment Demandez un devis ?</button>
         <button class="chatbot-suggestion">Quels sont vos délais de livraison ?</button>
         <button class="chatbot-suggestion">Proposez-vous des formations ?</button>
         <button class="chatbot-suggestion">Comment vous contacter ?</button>
