--- a/seo_outil.html
+++ b/seo_outil.html
@@ -340,7 +340,7 @@
         <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
-            Demander un devis
+            Demandez un devis
             <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
           </a>
         </li>
@@ -650,7 +650,7 @@ document.addEventListener('DOMContentLoaded', function() {
       </div>
       <div class="chatbot-suggestions" id="chatbotSuggestions">
         <button class="chatbot-suggestion">Quels services proposez-vous ?</button>
-        <button class="chatbot-suggestion">Comment demander un devis ?</button>
+        <button class="chatbot-suggestion">Comment Demandez un devis ?</button>
         <button class="chatbot-suggestion">Quels sont vos délais de livraison ?</button>
         <button class="chatbot-suggestion">Proposez-vous des formations ?</button>
         <button class="chatbot-suggestion">Comment vous contacter ?</button>
