--- a/mdd.html
+++ b/mdd.html
@@ -632,7 +632,11 @@
    <!-- Navigation -->
 <nav class="navbar" id="navbar">
     <div class="container nav-container">
-      <div class="nav-logo"><h2></i> Porokhane Digital</h2></div>
+      <div class="nav-logo">
+        <a href="index.html">
+          <img src="logo.png" alt="Porokhane Digital Consulting Logo">
+        </a>
+      </div>
         
       <!-- Menu Hamburger -->
       <button class="hamburger" id="hamburger" aria-label="Menu">
