--- a/audit_express.html
+++ b/audit_express.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audit Express Digital - Porokhane Digital Consulting</title>
   <meta name="description" content="Obtenez un diagnostic rapide et précis de votre présence digitale. Audit SEO, réseaux sociaux, UX, sécurité, visibilité en ligne.">
+  <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
