--- a/robotique.html
+++ b/robotique.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formation Robotique - Porokhane Digital Consulting</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <meta name="description" content="Formation complète en robotique : conception, programmation, Arduino, Raspberry Pi. Apprenez à construire des robots fonctionnels de A à Z.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
