--- a/impression_3D.html
+++ b/impression_3D.html
@@ -442,7 +442,7 @@
       <strong>Contact :</strong> Pour vous inscrire à cette formation impression 3D :<br>
       <strong>Email :</strong> <a href="mailto:abdoulaye.faye@digital-porokhane.com">abdoulaye.faye@digital-porokhane.com</a><br>
       <strong>Téléphone :</strong> <a href="tel:+221710589088 ">+221 710589088 </a><br>
-      <strong>Site web :</strong> <a href="https://www.porokhane.digital" target="_blank">www.porokhane.digital</a>
+      <strong>Site web :</strong> <a href="https://digital-porokhane.com" target="_blank">digital-porokhane.com</a>
     </div>
   </main>
   <!-- Pied de page -->
