--- a/erp.html
+++ b/erp.html
@@ -427,7 +427,7 @@
       <strong>Contact :</strong> Pour optimiser la gestion de votre entreprise avec un ERP performant :<br>
       <strong>Email :</strong> <a href="mailto:responsable.marketing@digital-porokhane.com">responsable.marketing@digital-porokhane.com</a><br>
       <strong>Téléphone :</strong> <a href="tel:+221710589088 ">+221 710589088 </a><br>
-      <strong>Site web :</strong> <a href="https://www.porokhane.digital" target="_blank">www.porokhane.digital</a>
+      <strong>Site web :</strong> <a href="https://digital-porokhane.com" target="_blank">digital-porokhane.com</a>
     </div>
   </main>
   <!-- Footer, chatbot, JS (copie conforme à strategie_digitale.html) -->
