--- a/audit_express.html
+++ b/audit_express.html
@@ -619,7 +619,7 @@
     </ul>
     <div class="audit-contact">
       <strong>Contact :</strong> Pour bénéficier de votre audit express :<br>
-      <strong>Email :</strong> <a href="mailto:responsable.marketing@digital-porokhane.com">responsable.marketing@digital-porokhane.com</a><br>
+      <strong>Email :</strong> <a href="mailto:mame.diarra@digital-porokhane.com">mame.diarra@digital-porokhane.com</a><br>
       <strong>Téléphone :</strong> <a href="tel:+221710589088 ">+221 710589088 </a><br>
       <strong>Site web :</strong> <a href="https://digital-porokhane.com" target="_blank">digital-porokhane.com</a>
     </div>
