--- a/index.html
+++ b/index.html
@@ -2058,7 +2058,7 @@
   <!-- Section À propos - Version optimisée -->
 <section id="apropos" class="services-section">
   <!-- Animation éléments flottants -->
-  <div class="floating-elements">
+  <div>
     <div class="floating-circle"></div>
     <div class="floating-triangle"></div>
   </div>
@@ -2067,7 +2067,7 @@
     <div class="hero-container">
       <!-- Colonne image -->
       <div class="hero-img">
-        <div class="parallax-wrapper">
+        <div>
           <img src="equipe_porokhane.png" alt="Équipe Porokhane Digital">
         </div>
       </div>
