--- a/devis.html
+++ b/devis.html
@@ -1912,6 +1912,7 @@
             <option value="">-- Sélectionnez --</option>
             <option value="entreprise">Entreprise</option>
             <option value="etablissement">Établissement</option>
+            <option value="autres">Autres</option>
           </select>
         </div>
         <input type="text" name="nom" placeholder="Votre nom complet" required>
@@ -1938,66 +1939,7 @@
   
   
   
-  <!-- Contact & Newsletter 
-  <section id="contact" class="contact-section">
-    <div class="container">
-      <div class="section-header">
-        <h2>Contactez Notre Équipe</h2>
-        <p>Prêt à transformer votre entreprise ? Parlons de votre projet</p>
-      </div>
-      <div class="contact-content">
-        <div class="contact-info">
-          <div class="contact-item">
-            <div class="contact-icon"><i class="fas fa-envelope"></i></div>
-            <div>
-              <h3>Email</h3>
-              <p>contact@porokhane-digital.com</p>
-            </div>
-          </div>
-          <div class="contact-item">
-            <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
-            <div>
-              <h3>Téléphone</h3>
-              <p>+221 XX XXX XX XX</p>
-              <p>Lun-Ven : 8h-18h</p>
-            </div>
-          </div>
-          <div class="contact-item">
-            <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-            <div>
-              <h3>Adresse</h3>
-              <p>Rue des Entrepreneurs, Porokhane</p>
-              <p>Sénégal</p>
-            </div>
-          </div>
-          <div class="contact-item">
-            <div class="contact-icon"><i class="fas fa-clock"></i></div>
-            <div>
-              <h3>Horaires</h3>
-              <p>Lundi - Vendredi : 8h - 18h</p>
-              <p>Samedi : 9h - 13h</p>
-            </div>
-          </div>
-        </div>
-        <form class="contact-form" id="contactForm">
-          <div class="form-group">
-            <input type="text" name="name" placeholder="Votre nom complet" required>
-          </div>
-          <div class="form-group">
-            <input type="email" name="email" placeholder="Votre adresse email" required>
-          </div>
-          <div class="form-group">
-            <input type="text" name="subject" placeholder="Sujet de votre message" required>
-          </div>
-          <div class="form-group">
-            <textarea name="message" placeholder="Comment pouvons-nous vous aider ?" rows="5" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary"><i class="fas fa-paper-plane"></i> Envoyer le message</button>
-        </form>
-      </div>
-     
-    </div>
-  </section> -->
+  
   
   <!-- Footer -->
   <footer class="footer">
