--- a/contact.html
+++ b/contact.html
@@ -1124,42 +1124,6 @@
       border: 2px solid var(--vert);
       flex-shrink: 0;
     }
-
-    /* Newsletter Responsive - Version Mobile uniquement */
-@media (max-width: 768px) {
-  .newsletter {
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-    margin: 2rem 10px;
-  }
-  
-  .newsletter input[type="email"],
-  .newsletter button {
-    width: 100%;
-  }
-  
-  .newsletter button {
-    justify-content: center;
-  }
-}
-
-@media (max-width: 480px) {
-  .newsletter {
-    margin: 2rem 5px;
-    padding: 1rem;
-  }
-  
-  .newsletter input[type="email"] {
-    font-size: 0.9rem;
-    padding: 0.8rem;
-  }
-  
-  .newsletter button {
-    font-size: 0.9rem;
-    padding: 0.8rem 1.5rem;
-  }
-}
   </style>
 </head>
 <body>
@@ -1577,5 +1541,26 @@ document.addEventListener('DOMContentLoaded', function() {
   }
   </script>
   
+
+  <!-- EmailJS -->
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  (function(){
+    emailjs.init("nwp2QzoxgP9Jpfn_S"); // Ton Public Key (User ID) 
+  })();
+
+  document.getElementById('contactForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    emailjs.sendForm('service_c8vcg1l', 'template_v70j2gh', this) // ← remplace par ton vrai Template ID
+      .then(function() {
+        alert("Message envoyé avec succès !");
+        document.getElementById('contactForm').reset();
+      }, function(error) {
+        alert("Erreur lors de l'envoi : " + error.text);
+      });
+  });
+</script>
+
 </body>
 </html>
