--- a/a-propos.html
+++ b/a-propos.html
@@ -1645,7 +1645,7 @@
             <li>Conception de formations</li>
           </ul>
           <div class="social-links">
-            <a href="#" aria-label="LinkedIn" class="linkedin-link"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/company/porokhane-digital-consulting" aria-label="LinkedIn" class="linkedin-link"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
@@ -1710,10 +1710,10 @@
       </div>
         <p>Votre partenaire de confiance pour la transformation digitale. Nous créons des solutions innovantes qui propulsent votre entreprise vers le succès.</p>
         <div class="social-links">
-          <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/Porokhane.Digital.Consulting" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a href="#" aria-label="tiktok"><i class="fab fa-tiktok"></i></a>
           <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/porokhane_digital_consulting/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <div class="footer-section">
