--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <meta name="google-site-verification" content="IT3v7q_2vo0wuXA7SIe4jXER1ot-GCSMRiGwoS65Yg8" />
   <style>
     :root {
       --vert: #1fa47a;
