--- a/medical-distribution.html
+++ b/medical-distribution.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <script>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"4839b43b65f279b77271391d6643be69"})});</script>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
