--- a/accompagnement.html
+++ b/accompagnement.html
@@ -8,6 +8,8 @@
   <title>Accompagnement | Porokhane Digital Consulting</title>
   <meta name="description" content="Services d'accompagnement : Automatisation, Bases de données et Intelligence Artificielle pour votre transformation digitale.">
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
