--- a/mo.html
+++ b/mo.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projet SEO & Réseaux Sociaux | Porokhane Digital</title>
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
  
