--- a/automatisation.html
+++ b/automatisation.html
@@ -7,6 +7,7 @@
   <title>Automatisation des Processus - Porokhane Digital Consulting</title>
   <meta name="description" content="Automatisation sur mesure de vos tâches et processus métiers. Diagnostic, développement, déploiement, accompagnement.">
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
