--- a/devis.html
+++ b/devis.html
@@ -7,6 +7,7 @@
   <title>Porokhane Digital Consulting - Solutions Digitales Innovantes</title>
   <meta name="description" content="Porokhane Digital Consulting - Solutions digitales innovantes pour entreprises et organisations. Développement web, applications mobiles, marketing digital.">
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
