--- a/erp.html
+++ b/erp.html
@@ -7,6 +7,7 @@
   <title>ERP (Enterprise Resource Planning) - Porokhane Digital Consulting</title>
   <meta name="description" content="ERP sur mesure pour la gestion intégrée de votre entreprise. Analyse, développement, déploiement, formation et accompagnement.">
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
