--- a/ia.html
+++ b/ia.html
@@ -7,6 +7,7 @@
   <title>Intelligence Artificielle (IA) - Porokhane Digital Consulting</title>
   <meta name="description" content="Intégration de l'intelligence artificielle sur mesure. Diagnostic, modélisation, déploiement, accompagnement IA pour votre entreprise.">
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
