--- a/impression_3D.html
+++ b/impression_3D.html
@@ -7,6 +7,7 @@
   <title>Formation Impression 3D - Porokhane Digital Consulting</title>
   <meta name="description" content="Formation complète en impression 3D : modélisation, fabrication, logiciels 3D. Apprenez à créer vos propres objets et prototypes.">
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
