--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Porokhane Digital Consulting - Solutions Digitales Innovantes</title>
   <meta name="description" content="Porokhane Digital Consulting - Solutions digitales innovantes pour entreprises et organisations. Développement web et Mobile, applications mobiles, marketing digital.">
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <meta name="google-site-verification" content="IT3v7q_2vo0wuXA7SIe4jXER1ot-GCSMRiGwoS65Yg8" />
