--- a/mdd.html
+++ b/mdd.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projet SEO & Réseaux Sociaux | Porokhane Digital</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
