--- a/service.html
+++ b/service.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nos Services - Porokhane Digital Consulting</title>
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <meta name="description" content="Découvrez tous nos services digitaux : formations, marketing, accompagnement, ERP, développement web et sécurité IT.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
