--- a/site.html
+++ b/site.html
@@ -7,6 +7,7 @@
   <title>Création & Refonte de Sites Web - Porokhane Digital Consulting</title>
   <meta name="description" content="Création et refonte de sites web modernes, performants et adaptés à vos objectifs métiers. Design stratégique, UX moderne et technologies fiables.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     :root { --vert: #1fa47a; --vert-clair: #d1fae5; --bleu: #2563eb; --bleu-clair: #dbeafe; --blanc: #fff; --gris-bg: #f6f8fa; --gris-texte: #64748b; --gris-titre: #1e293b; --ombre: 0 4px 24px rgba(0,0,0,0.08); --rayon: 18px; --rayon-grand: 28px; }
