--- a/wordpress.html
+++ b/wordpress.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sécuriser son site WordPress - Porokhane Digital Consulting</title>
   <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+
   <meta name="description" content="Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces, accessibles à tous. Guide complet de sécurité WordPress.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
