--- a/audit_express.html
+++ b/audit_express.html
@@ -593,7 +593,8 @@
   <div class="menu-overlay" id="menuOverlay"></div>
 
   <main class="audit-main">
-    <div class="audit-title"> Audit Express Digital</div>
+    <H1 class="audit-title">Audit Express Digital</H1>
+    
     <div class="audit-intro">Pourquoi un audit digital express ? Parce qu’un bon pilotage digital commence par un diagnostic clair. Notre méthode exclusive vous offre un état des lieux rapide, stratégique et actionnable de votre présence en ligne.</div>
     <div class="audit-section-title">Notre méthode : rigueur, outils avancés & efficacité</div>
     <ol class="audit-steps">
