--- a/automatisation.html
+++ b/automatisation.html
@@ -554,7 +554,8 @@
   <div class="menu-overlay" id="menuOverlay"></div>
 
   <main class="service-main">
-    <div class="service-title">Automatisation des Processus</div>
+    <H1 class="service-title">Automatisation des Processus</H1>
+    
     <div class="service-intro">Pourquoi automatiser vos tâches ?<br>Pour gagner en efficacité, réduire les erreurs et libérer du temps pour ce qui compte vraiment. Nous créons des solutions d’automatisation sur mesure, fiables et simples à utiliser.</div>
     <div class="service-section-title"> Notre méthode : écoute, ingénierie & impact immédiat</div>
     <ol class="service-steps">
