--- a/base_donnee.html
+++ b/base_donnee.html
@@ -435,7 +435,8 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Gestion de Bases de Données</div>
+    <H1 class="service-title">Gestion de Bases de Données</H1>
+    
     <div class="service-intro">Pourquoi une base de données sur mesure ?<br>Parce qu’une bonne gestion de l’information commence par une structuration fiable, performante et évolutive. Nous concevons et administrons des bases de données qui s’adaptent à votre activité et à vos objectifs.</div>
     <div class="service-section-title"> Notre approche : précision, performance & sécurité</div>
     <ol class="service-steps">
