--- a/cybersecurite.html
+++ b/cybersecurite.html
@@ -518,7 +518,8 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Formation Cybersécurité - Protection des Systèmes & Réseaux</div>
+    <H1  class="service-title">Formation Cybersécurité - Protection des Systèmes & Réseaux</H1>
+    
     <div class="service-intro">Vous souhaitez comprendre les menaces numériques, sécuriser vos données ou débuter une carrière dans la cybersécurité ? Ce parcours vous apporte les compétences essentielles.</div>
     <div class="service-section-title">Objectifs de la formation</div>
     <ul class="service-unique-list">
