--- a/erp.html
+++ b/erp.html
@@ -413,7 +413,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Service ERP (Enterprise Resource Planning)</div>
+    <h1 class="service-title">Service ERP (Enterprise Resource Planning)</h1>
     <div class="service-intro">Pourquoi un ERP sur mesure ?<br>Parce que gérer efficacement toutes les ressources de votre entreprise nécessite une solution intégrée, flexible et adaptée à vos spécificités métiers. Notre ERP centralise vos données et automatise vos processus pour une meilleure prise de décision et une optimisation opérationnelle.</div>
     <div class="service-section-title">Notre approche : intégration, personnalisation & pilotage global</div>
     <ol class="service-steps">
