--- a/ia.html
+++ b/ia.html
@@ -410,7 +410,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Intelligence Artificielle (IA)</div>
+    <h1 class="service-title">Intelligence Artificielle (IA)</h1>
     <div class="service-intro">Pourquoi intégrer l’intelligence artificielle ?<br>Pour anticiper, recommander et décider plus intelligemment. Nous concevons des modèles IA qui transforment vos données en leviers d’action.</div>
     <div class="service-section-title">Notre approche : science des données, éthique & résultats concrets</div>
     <ol class="service-steps">
