--- a/reseaux_sociaux.html
+++ b/reseaux_sociaux.html
@@ -383,7 +383,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Notre Stratégie Réseaux Sociaux</div>
+    <h1 class="service-title">Notre Stratégie Réseaux Sociaux</h1>
     <div class="service-intro">Pourquoi une stratégie réseaux sociaux claire et structurée&nbsp;?<br>Une présence professionnelle sur les réseaux sociaux est indispensable pour attirer, engager et fidéliser votre audience. Elle permet de diffuser des messages pertinents, cohérents et alignés à votre marque, tout en développant votre notoriété et votre communauté.</div>
     <div class="service-section-title">Nos 5 Piliers Stratégiques</div>
     <ol class="service-steps">
