--- a/robotique.html
+++ b/robotique.html
@@ -387,7 +387,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"> Formation Robotique - Conception & Programmation</div>
+    <h1 class="service-title"> Formation Robotique - Conception & Programmation</h1>
     <div class="service-intro">Vous rêvez de construire un robot fonctionnel, de comprendre comment il perçoit son environnement et prend des décisions ? Ce parcours vous donne toutes les clés pour concrétiser vos idées, même si vous débutez.</div>
     <div class="service-section-title">Objectifs de la formation</div>
     <ul class="service-unique-list">
