--- a/securite.html
+++ b/securite.html
@@ -388,7 +388,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-shield-alt"></i> Service de Sécurité IT</div>
+    <h1 class="service-title"> Service de Sécurité IT</h1>
     <div class="service-intro">Pourquoi sécuriser votre site WordPress ?<br>Parce qu'un site web vulnérable peut entraîner des pertes financières, une perte de crédibilité et une exposition aux cyberattaques. Notre service de sécurité assure la protection, la stabilité et la conformité de votre site face aux menaces actuelles.</div>
     <div class="service-section-title">Notre approche : prévention, surveillance & restauration rapide</div>
     <ol class="service-steps">
