--- a/seo.html
+++ b/seo.html
@@ -388,7 +388,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Notre stratégie de référencement naturel SEO</div>
+    <h1 class="service-title">Notre stratégie de référencement naturel SEO</h1>
     <div class="service-intro">Pourquoi investir dans le référencement naturel (SEO) ?<br>Un bon référencement naturel est crucial pour augmenter durablement votre visibilité en ligne, générer du trafic qualifié et booster vos conversions sans dépendre uniquement de la publicité payante.</div>
     <div class="service-section-title">Notre approche structurée en 5 étapes</div>
     <ol class="service-steps">
