--- a/site.html
+++ b/site.html
@@ -408,7 +408,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Création & Refonte de Sites Web</div>
+    <h1 class="service-title">Création & Refonte de Sites Web</h1>
     <div class="service-intro">Pourquoi (re)penser votre site web&nbsp;?<br>Parce que votre site est votre première vitrine digitale. Qu’il s’agisse d’une création ou d’une refonte, nous réalisons des sites web modernes, performants et adaptés à vos objectifs métiers.</div>
     <div class="service-section-title"> Notre méthode&nbsp;: design stratégique, UX moderne & technologies fiables</div>
     <ol class="service-steps">
