--- a/strategie_digitale.html
+++ b/strategie_digitale.html
@@ -543,7 +543,7 @@
   </nav>
 
   <main class="strategie-main">
-    <div class="strategie-title">Notre Stratégie Digitale</div>
+    <h1 class="strategie-title">Notre Stratégie Digitale</h1>
     <div class="strategie-intro">Chez Porokhane Digital Consulting, nous croyons qu’un bon marketing digital doit créer de la valeur, inspirer la confiance et produire des résultats mesurables. Inspirée des meilleures pratiques internationales, notre méthode est adaptée au contexte africain et repose sur 5 grandes étapes clés.</div>
     <div class="timeline">
       <div class="timeline-step">
