--- a/visible_seo.html
+++ b/visible_seo.html
@@ -389,7 +389,7 @@
   </nav>
 
   <main class="blog-main">
-    <div class="blog-title"> Algorithme Google SEO 2024 : 10 astuces pour être visible</div>
+    <h1 class="blog-title"> Algorithme Google SEO 2024 : 10 astuces pour être visible</h1>
     <div class="blog-intro">Parmi les facteurs de classement utilisés par <strong>l'algorithme Google en 2024</strong>, on retrouve, en premier, la publication continue de contenus engageants. Une bonne nouvelle pour les sites internet qui accordent une grande importance à la valeur ajoutée de leurs pages et articles !</div>
 
     <div class="blog-section">
