--- a/impression_3D.html
+++ b/impression_3D.html
@@ -412,7 +412,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Formation Impression 3D - Modélisation & Fabrication</div>
+    <h1 class="service-title">Formation Impression 3D - Modélisation & Fabrication</h1>
     <div class="service-intro">Vous souhaitez créer vos propres objets, pièces mécaniques ou prototypes grâce à l'impression 3D ? Ce parcours vous guide pas à pas, de la conception à la fabrication.</div>
     <div class="service-section-title">Objectifs de la formation</div>
     <ul class="service-unique-list">
