--- a/a-propos.html
+++ b/a-propos.html
@@ -1393,7 +1393,7 @@
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
       <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="logo.png" alt="Porokhane Digital Consulting Logo">
         </a>
       </div>
@@ -1406,7 +1406,7 @@
 </button>
 
 <ul class="nav-menu" id="nav-menu">
-        <li><a href="index.html" class="nav-link">Accueil</a></li>
+        <li><a href="https://digital-porokhane.com/" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link" style="color: var(--vert);">À propos</a></li>
         <li class="nav-item">
           <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
