--- a/index.html
+++ b/index.html
@@ -1985,7 +1985,7 @@
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
       <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="logo.png" alt="Porokhane Digital Consulting  Logo">
         </a>
       </div>
