--- a/a-propos.html
+++ b/a-propos.html
@@ -1707,7 +1707,7 @@
     <div class="footer-content">
       <div class="footer-section">
          <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
         </a>
       </div>
@@ -1722,19 +1722,19 @@
       <div class="footer-section">
         <h4>Nos Services</h4>
         <ul>
-          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Formations Pédagogiques</a></li>
-          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
-          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
-          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
-          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Développement Web et Mobile</a></li>
-          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Sécurité IT</a></li>
+          <li><a href="formations.html"><i class="fas fa-chevron-right"></i> Formations Pédagogiques</a></li>
+          <li><a href="marketing.html"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
+          <li><a href="accompagnement.html"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
+          <li><a href="erp.html"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
+          <li><a href="site.html"><i class="fas fa-chevron-right"></i> Développement Web et Mobile</a></li>
+          <li><a href="securite.html"><i class="fas fa-chevron-right"></i> Sécurité IT</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h4>Informations</h4>
         <ul>
-          <li><a href="index.html#accueil"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Services</a></li>
+          <li><a href="https://digital-porokhane.com/"><i class="fas fa-chevron-right"></i> Accueil</a></li>
+          <li><a href="service.html"><i class="fas fa-chevron-right"></i> Services</a></li>
           <li><a href="blog.html"><i class="fas fa-chevron-right"></i> Actualités</a></li>
           <li><a href="index.html#temoignages"><i class="fas fa-chevron-right"></i> Témoignages</a></li>
           <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
@@ -1937,7 +1937,7 @@ document.addEventListener('DOMContentLoaded', function() {
       }, 150);
       
       // Si on est déjà sur la page d'accueil, empêcher la navigation
-      if (window.location.pathname.includes('index.html') || window.location.pathname === '/') {
+      if (window.location.pathname.includes('https://digital-porokhane.com/') || window.location.pathname === '/') {
         e.preventDefault();
         // Scroll vers le haut de la page
         window.scrollTo({
