--- a/contact.html
+++ b/contact.html
@@ -1136,7 +1136,7 @@
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
       <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="logo.png" alt="Porokhane Digital Consulting Logo">
         </a>
       </div>
@@ -1147,7 +1147,7 @@
         <span></span>
       </button>
       <ul class="nav-menu" id="nav-menu">
-        <li><a href="index.html" class="nav-link">Accueil</a></li>
+        <li><a href="https://digital-porokhane.com/" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <li class="nav-item">
           <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
@@ -1269,7 +1269,7 @@
       <div class="footer-content">
         <div class="footer-section">
            <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
         </a>
       </div>
@@ -1285,7 +1285,7 @@
           <h4>Nos Services</h4>
           <ul>
             <li><a href="formations.html"><i class="fas fa-chevron-right"></i> Formations Pédagogiques</a></li>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
+            <li><a href="marketing.html"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
             <li><a href="accompagnement.html"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
             <li><a href="erp.html"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
             <li><a href="site.html"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
@@ -1295,7 +1295,7 @@
         <div class="footer-section">
           <h4>Informations</h4>
           <ul>
-            <li><a href="index.html"><i class="fas fa-chevron-right"></i> Accueil</a></li>
+            <li><a href="https://digital-porokhane.com/"><i class="fas fa-chevron-right"></i> Accueil</a></li>
             <li><a href="service.html"><i class="fas fa-chevron-right"></i> Services</a></li>
             <li><a href="blog.html"><i class="fas fa-chevron-right"></i> Actualités</a></li>
             <li><a href="index.html#temoignages"><i class="fas fa-chevron-right"></i> Témoignages</a></li>
@@ -1449,7 +1449,7 @@ document.addEventListener('DOMContentLoaded', function() {
       }, 150);
       
       // Si on est déjà sur la page d'accueil, empêcher la navigation
-      if (window.location.pathname.includes('index.html') || window.location.pathname === '/') {
+      if (window.location.pathname.includes('https://digital-porokhane.com/') || window.location.pathname === '/') {
         e.preventDefault();
         // Scroll vers le haut de la page
         window.scrollTo({
