--- a/index.html
+++ b/index.html
@@ -2754,7 +2754,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
         </a>
       </div>
