--- a/reseaux_sociaux.html
+++ b/reseaux_sociaux.html
@@ -329,7 +329,7 @@
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
       <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="logo.png" alt="Porokhane Digital Consulting Logo">
         </a>
       </div>
@@ -342,7 +342,7 @@
       </button>
       
       <ul class="nav-menu" id="nav-menu">
-        <li><a href="index.html" class="nav-link">Accueil</a></li>
+        <li><a href="https://digital-porokhane.com/" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <li class="nav-item">
           <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
@@ -461,7 +461,7 @@
       <div class="footer-content">
         <div class="footer-section">
            <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
         </a>
       </div>
@@ -617,7 +617,7 @@ document.addEventListener('DOMContentLoaded', function() {
       }, 150);
       
       // Si on est déjà sur la page d'accueil, empêcher la navigation
-      if (window.location.pathname.includes('index.html') || window.location.pathname === '/') {
+      if (window.location.pathname.includes('https://digital-porokhane.com/') || window.location.pathname === '/') {
         e.preventDefault();
         // Scroll vers le haut de la page
         window.scrollTo({
