--- a/service.html
+++ b/service.html
@@ -785,7 +785,7 @@
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
         <div class="nav-logo">
-          <a href="index.html">
+          <a href="https://digital-porokhane.com/">
             <img src="logo.png" alt="Porokhane Digital Consulting Logo">
           </a>
         </div>
@@ -798,7 +798,7 @@
       </button>
       
       <ul class="nav-menu" id="nav-menu">
-        <li><a href="index.html" class="nav-link">Accueil</a></li>
+        <li><a href="https://digital-porokhane.com/" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <li class="nav-item">
           <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
@@ -920,7 +920,7 @@
     <div class="footer-content">
       <div class="footer-section">
          <div class="nav-logo">
-        <a href="index.html">
+        <a href="https://digital-porokhane.com/">
           <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
         </a>
       </div>
@@ -946,7 +946,7 @@
       <div class="footer-section">
           <h4>Informations</h4>
           <ul>
-            <li><a href="index.html"><i class="fas fa-chevron-right"></i> Accueil</a></li>
+            <li><a href="https://digital-porokhane.com/"><i class="fas fa-chevron-right"></i> Accueil</a></li>
             <li><a href="service.html"><i class="fas fa-chevron-right"></i> Services</a></li>
             <li><a href="#temoignages"><i class="fas fa-chevron-right"></i> Témoignages</a></li>
           <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
@@ -1057,7 +1057,7 @@ document.addEventListener('DOMContentLoaded', function() {
       }, 150);
       
       // Si on est déjà sur la page d'accueil, empêcher la navigation
-      if (window.location.pathname.includes('index.html') || window.location.pathname === '/') {
+      if (window.location.pathname.includes('https://digital-porokhane.com/') || window.location.pathname === '/') {
         e.preventDefault();
         // Scroll vers le haut de la page
         window.scrollTo({
