--- a/a-propos.html
+++ b/a-propos.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>À propos | Porokhane Digital Consulting</title>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+<!-- End Google Tag Manager -->
   <meta name="description" content="Découvrez la vision, l'équipe et les valeurs de Porokhane Digital Consulting, agence digitale innovante au Sénégal.">
   <link rel="icon" type="image/png" href="logo.png">
   <link rel="canonical" href="https://digital-porokhane.com/contact.html">
@@ -1390,6 +1397,11 @@
 </head>
 <body>
   <!-- Navigation -->
+
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MT6DMTW8"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
       <div class="nav-logo">
