--- a/formations.html
+++ b/formations.html
@@ -7,6 +7,13 @@
   <title>Formations | Porokhane Digital Consulting</title>
   <meta name="description" content="Formations en Robotique, Impression 3D et Cybersécurité. Développez vos compétences avec nos experts.">
   <link rel="icon" type="image/png" href="logo.png">
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+<!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/contact.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -985,6 +992,12 @@
   </style>
 </head>
 <body>
+
+
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MT6DMTW8"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <!-- Navigation -->
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
