--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Porokhane Digital Consulting - Solutions Digitales Innovantes</title>
+  <title>Porokhane Digital Consulting - Solutions Digitales Innovantes - AGENCE DE MARKETING DIGITAL DAKAR</title>
   <meta name="description" content="Porokhane Digital Consulting - Solutions digitales innovantes pour entreprises et organisations. Développement web et Mobile, applications mobiles, marketing digital.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
