--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Porokhane Digital Consulting - Solutions Digitales Innovantes -AGENCE DE MARKETING DIGITAL DAKAR</title>
-  <meta name="description" content="Porokhane Digital Consulting - Solutions digitales innovantes pour entreprises et organisations. Développement web et Mobile, applications mobiles, marketing digital.">
+  <title>AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital Consulting | Solutions Digitales</title>
+  <meta name="description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital Consulting vous accompagne dans votre transformation digitale. Solutions innovantes : développement web, marketing digital, communication visuelle à Dakar.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -14,7 +14,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+  
+  <!-- Meta keywords -->
+  <meta name="keywords" content="agence communication digitale dakar, marketing digital dakar, communication visuelle sénégal, stratégie digitale dakar">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital Consulting">
+  <meta property="og:description" content="Solutions digitales innovantes à Dakar : développement web, marketing digital, communication visuelle">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital">
+  <meta name="twitter:description" content="Solutions digitales innovantes à Dakar">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
+  
+  <link rel="canonical" href="https://digital-porokhane.com/">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <meta name="google-site-verification" content="IT3v7q_2vo0wuXA7SIe4jXER1ot-GCSMRiGwoS65Yg8" />
@@ -1997,7 +2014,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container nav-container">
       <div class="nav-logo">
         <a href="https://digital-porokhane.com/">
-          <img src="logo.png" alt="Porokhane Digital Consulting  Logo">
+          <img src="logo.png" alt="AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital Consulting Logo">
         </a>
       </div>
       
@@ -2072,7 +2089,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section id="accueil" class="hero">
     <div class="container hero-container">
       <div class="hero-content">
-        <h1 class="hero-title">Votre partenaire pour un monde numérique inclusif</h1>
+        <h1>Agence de Communication Digitale Dakar - Votre partenaire pour un monde numérique inclusif</h1>
         <p class="hero-subtitle">Porokhane Digital Consulting vous accompagne dans votre transformation digitale avec des solutions innovantes et sur mesure pour booster votre activité.</p>
         <div class="hero-buttons">
           
