--- a/wordpress.html
+++ b/wordpress.html
@@ -13,8 +13,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
-  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+  <link rel="canonical" href="https://digital-porokhane.com/wordpress.html">
+  
 
   <meta name="description" content="Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces, accessibles à tous. Guide complet de sécurité WordPress.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
