--- a/mdd.html
+++ b/mdd.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+  <link rel="canonical" href="https://digital-porokhane.com/mdd.html">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
