--- a/medical-distribution.html
+++ b/medical-distribution.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Refonte du site Medical Distribution | Porokhane Digital</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+  <link rel="canonical" href="https://digital-porokhane.com/medical-distribution.html">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
