--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+  <link rel="canonical" href="https://digital-porokhane.com/service.html">
   <meta name="description" content="Découvrez tous nos services digitaux : formations, marketing, accompagnement, ERP, développement web et sécurité IT.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
